testprep/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: testprep
  labels:
    name: testprep
