testprep/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: testprep
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          resources:
            requests:
              cpu: 800m
              memory: 512Mi
            limits:
              cpu: 1500m
              memory: 1024Mi
          image: ghcr.io/test-prep-ai/backend:1.2.5
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 5"]
          ports:
            - containerPort: 8080
