testprep/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testprep-ingress
  namespace: testprep
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:488157851585:certificate/9b097851-7f8c-4593-a7ae-7f1b3d465bdc
    alb.ingress.kubernetes.io/group.name: "testprep"
spec:
  rules:
    - http:
        paths:
          - path: /login
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /ai
            pathType: Prefix
            backend:
              service:
                name: ai
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
